devops-tools/overlays/jenkins/prod-master/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  template:
    spec:
      serviceAccountName: jenkins-admin-master
      containers:
        - name: jenkins
          volumeDevices:
            - devicePath: /var/jenkins_home_master
              name: jenkins-data-master
      volumes:
        - name: jenkins-data-master
          persistentVolumeClaim:
              claimName: jenkins-pv-claim
